correction au niveau de collapse toogle

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -48,4 +48,6 @@
 
 .Collapse-toggle p {
   font-family: Montserrat, sans-serif;
+  color: #FF6060;
+  text-align: left; 
 }
